Bug: 95492
Remove deprecated java args from mailboxd_java_options.

https://bugzilla.zimbra.com/show_bug.cgi?id=95492

Copied from Perforce
 Change: 535849